project/stage/testing/semantic/semantic_tests/reject/1_2_func_call.ul
void main() {
    int a;
    foo(a);
}

void foo(int a, float b) {
    print a;
    print b;
}
